--- a/index.html
+++ b/index.html
@@ -2,37 +2,37 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Noorani</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
-    <script src="https://cdn.tailwindcss.com"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Noorani</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Favicon Links -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+  <!-- Favicon Links -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
-    <!-- Video Background Section -->
-    <section class="hero-section">
-        <div class="video-container">
-            <video autoplay muted loop>
-                <source src="assets/homepage.mp4" type="video/mp4">
-            </video>
-        </div>
+  <!-- Video Background Section -->
+  <section class="hero-section">
+    <div class="video-container">
+      <video autoplay muted loop>
+        <source src="assets/homepage.mp4" type="video/mp4">
+      </video>
+    </div>
 
-        <!-- Fading Text -->
-        <div class="overlay">
-            <h1><span class="tropikal-font fade-in-title">Noorani</span></h1>
-            <p class="subtext fade-in-subtext">Where Every Bite is a Ray of Delight</p>
-        </div>
-    </section>
+    <!-- Fading Text (Logo removed as requested) -->
+    <div class="overlay">
+      <h1><span class="tropikal-font fade-in-title">Noorani</span></h1>
+      <p class="subtext fade-in-subtext">Where Every Bite is a Ray of Delight</p>
+    </div>
+  </section>
 
-   <!-- Navbar -->
+  <!-- Navbar -->
   <nav class="navbar">
     <div class="logo-container" style="display: flex; align-items: center;">
       <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
@@ -42,89 +42,88 @@
       <a href="#">Home</a>
       <a href="#">Menu</a>
       <a href="farm-to-table.html">Farm-to-Table</a>
-      <a href="#">About</a>
       <a href="#">Takeout</a>
-      <a href="contact.html">Contact</a>
+      <a href="contactus.html">Contact</a>
       <a href="#our-roots">Our Roots</a>
     </div>
     <div class="menu-btn">&#9776;</div>
   </nav>
 
-    <!-- Split Layout Section -->
-    <section class="split-section" id="our-roots">
-        <div class="split-image">
-            <img src="assets/emptyplace.jpg" alt="Empty Restaurant">
-        </div>
-        <div class="split-text">
-            <h2>Our Roots</h2>
-            <p>At Noorani, our name, in itself, carries the essence of our culinary palette. When breaking up our name, ‘Noor’ – means light, symbolizing the warmth and rich heritage that Indian and Middle Eastern bring to our table. Our exquisitely picked-out menu shines with bold flavors, fresh ingredients, and traditional food, bringing together two cultures and creating culinary excellence.</p>
-            <a href="roots.html" class="hero-button">Learn More</a>
-        </div>
-    </section>
+  <!-- Split Layout Section -->
+  <section class="split-section" id="our-roots">
+    <div class="split-image">
+        <img src="assets/emptyplace.jpg" alt="Empty Restaurant">
+    </div>
+    <div class="split-text">
+        <h2>Our Roots</h2>
+        <p>At Noorani, our name, in itself, carries the essence of our culinary palette. When breaking up our name, ‘Noor’ – means light, symbolizing the warmth and rich heritage that Indian and Middle Eastern bring to our table. Our exquisitely picked-out menu shines with bold flavors, fresh ingredients, and traditional food, bringing together two cultures and creating culinary excellence.</p>
+        <a href="roots.html" class="hero-button">Learn More</a>
+    </div>
+</section>
 
-    <!-- Quote Over Video Section -->
-    <section class="quote-video-section">
-        <video autoplay muted loop playsinline>
-            <source src="assets/quotebg.mp4" type="video/mp4" />
-        </video>
-        <div class="quote-overlay">
-            <p class="quote-source">— Chef's Inspiration</p>
-            <h2 class="quote-text">“Where Flavor Meets Soul”</h2>
-            <a href="menu.html" class="quote-button">Explore Menu</a>
-        </div>
-    </section>
+<!-- Quote Over Video Section -->
+<section class="quote-video-section">
+    <video autoplay muted loop playsinline>
+        <source src="assets/quotebg.mp4" type="video/mp4" />
+    </video>
+    <div class="quote-overlay">
+        <p class="quote-source">— Chef's Inspiration</p>
+        <h2 class="quote-text">“Where Flavor Meets Soul”</h2>
+        <a href="menu.html" class="quote-button">Explore Menu</a>
+    </div>
+</section>
 
-    <!-- Reviews Carousel -->
-    <section style="background-color: var(--light-cream);" class="py-16">
-        <div class="text-center mb-10">
-            <h2 class="text-4xl font-semibold text-[#093C34]">What Our Customers Are Saying</h2>
-        </div>
+<!-- Reviews Carousel -->
+<section style="background-color: var(--light-cream);" class="py-16">
+    <div class="text-center mb-10">
+        <h2 class="text-4xl font-semibold text-[#093C34]">What Our Customers Are Saying</h2>
+    </div>
 
-        <div class="carousel-wrapper relative max-w-6xl mx-auto px-16">
-            <!-- Arrows -->
-            <button id="prevBtn" class="carousel-arrow left">&#10094;</button>
+    <div class="carousel-wrapper relative max-w-6xl mx-auto px-16">
+        <!-- Arrows -->
+        <button id="prevBtn" class="carousel-arrow left">&#10094;</button>
 
-            <!-- Slider Container -->
-            <div class="relative overflow-hidden">
-                <div id="carousel-track" class="flex transition-transform duration-500 ease-in-out space-x-6 touch-pan-x">
-                    <!-- Review cards -->
-                    <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                        <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                        <p class="italic text-gray-700">"Absolutely love the ambiance and the flavors here! Noorani is our new favorite spot."</p>
-                        <p class="mt-4 text-[#093C34] font-semibold">Sarah M.</p>
-                    </div>
-                    <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                        <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                        <p class="italic text-gray-700">"The falafel chaat was full of flavor and the naan was fresh out the oven!"</p>
-                        <p class="mt-4 text-[#093C34] font-semibold">Jason R.</p>
-                    </div>
-                    <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                        <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                        <p class="italic text-gray-700">"A fusion of cultures I didn’t know I needed. Beautiful decor and great music too."</p>
-                        <p class="mt-4 text-[#093C34] font-semibold">Nadia K.</p>
-                    </div>
-                    <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                        <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                        <p class="italic text-gray-700">"Amazing staff and top-notch service. Every dish is made with love."</p>
-                        <p class="mt-4 text-[#093C34] font-semibold">David P.</p>
-                    </div>
-                    <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                        <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                        <p class="italic text-gray-700">"Every bite took me on a journey. Noorani is truly special."</p>
-                        <p class="mt-4 text-[#093C34] font-semibold">Carlos M.</p>
-                    </div>
-                    <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
-                        <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
-                        <p class="italic text-gray-700">"The interior is gorgeous, and their lamb samosas? *Chef’s kiss*."</p>
-                        <p class="mt-4 text-[#093C34] font-semibold">Omar H.</p>
-                    </div>
+        <!-- Slider Container -->
+        <div class="relative overflow-hidden">
+            <div id="carousel-track" class="flex transition-transform duration-500 ease-in-out space-x-6 touch-pan-x">
+                <!-- Review cards -->
+                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+                    <p class="italic text-gray-700">"Absolutely love the ambiance and the flavors here! Noorani is our new favorite spot."</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">Sarah M.</p>
+                </div>
+                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+                    <p class="italic text-gray-700">"The falafel chaat was full of flavor and the naan was fresh out the oven!"</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">Jason R.</p>
+                </div>
+                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+                    <p class="italic text-gray-700">"A fusion of cultures I didn’t know I needed. Beautiful decor and great music too."</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">Nadia K.</p>
+                </div>
+                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+                    <p class="italic text-gray-700">"Amazing staff and top-notch service. Every dish is made with love."</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">David P.</p>
+                </div>
+                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+                    <p class="italic text-gray-700">"Every bite took me on a journey. Noorani is truly special."</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">Carlos M.</p>
+                </div>
+                <div class="flex-shrink-0 w-full sm:w-1/2 lg:w-1/3 bg-white p-6 rounded-xl shadow-md text-center">
+                    <div class="text-yellow-500 text-xl mb-3">★★★★★</div>
+                    <p class="italic text-gray-700">"The interior is gorgeous, and their lamb samosas? *Chef’s kiss*."</p>
+                    <p class="mt-4 text-[#093C34] font-semibold">Omar H.</p>
                 </div>
             </div>
-
-            <button id="nextBtn" class="carousel-arrow right">&#10095;</button>
-            <div id="carousel-dots" class="flex justify-center mt-6 gap-2"></div>
         </div>
-    </section>
+
+        <button id="nextBtn" class="carousel-arrow right">&#10095;</button>
+        <div id="carousel-dots" class="flex justify-center mt-6 gap-2"></div>
+    </div>
+</section>
 
     <!-- Redesigned Footer -->
   <footer class="footer-new">
@@ -135,7 +134,7 @@
         <ul class="footer-links-list">
           <li><a href="#">Terms of Service</a></li>
           <li><a href="#">Privacy Policy</a></li>
-          <li><a href="contact.html">Support</a></li>
+          <li><a href="contactus.html">Support</a></li>
         </ul>
       </div>
 
@@ -170,7 +169,7 @@
           <a href="#" class="social-icon"><img src="footer/youtube.png" alt="YouTube"></a>
           <a href="#" class="social-icon"><img src="footer/email.png" alt="Email"></a>
         </div>
-        <a href="contact.html" class="contact-btn">Contact Us</a>
+        <a href="contactus.html" class="contact-btn">Contact Us</a>
       </div>
     </div>
 
