--- a/sustainability.html
+++ b/sustainability.html
@@ -40,21 +40,31 @@
   </section>
  
   <!-- Navbar hi caitlyn-->
+  <!-- Navbar -->
   <nav class="navbar">
-      <div class="logo">
-        <a href="index.html">
-        <img src="noorani logo.png" alt="Noorani">
+    <div class="logo-container" style="display: flex; align-items: center;">
+      <a href="index.html" style="display: flex; align-items: center;">
+        <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
+        <div class="logo">Noorani</div>
       </a>
+    </div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="menu.html">Menu</a>
+      <a href="takeout.html">Take-Out</a>
+      <a href="reserve.html">Reserve</a>
+      <div class="relative group">
+        <a href="#" class="peer desktop-only">About Us</a>
+        <div class="absolute hidden peer-hover:flex group-hover:flex flex-col bg-white text-[#093C34] shadow-lg mt-1 rounded-lg overflow-hidden z-50 desktop-dropdown">
+          <a href="sustainability.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Sustainability</a>
+          <a href="roots.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Our Roots</a>
+          <a href="farm-to-table.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Farm-to-Table</a>
+          <a href="references.html" class="px-4 py-2 hover:bg-[#f3e2c4]">References</a>
+        </div>
       </div>
-      <div class="nav-links">
-          <a href="index.html">Home</a>
-          <a href="#">Menu</a>
-          <a href="#">About</a>
-          <a href="#">Takeout</a>
-          <a href="#">Contact</a>
-          <a href="sustainability.html">Sustainability</a>
-      </div>
-      <div class="menu-btn">&#9776;</div>
+      <a href="contactus.html">Contact</a>
+    </div>
+    <div class="menu-btn">&#9776;</div>
   </nav>
 
 
@@ -394,6 +404,134 @@ line-height: 1.7; /* Keep good spacing between lines */
           grid-template-columns: 1fr;
       }
   }
+  /* Navbar Styling */
+.navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 11vh;
+    background-color: transparent; /* Start transparent */
+    display: flex;
+    justify-content: space-between; /* Changed to space-between for better spacing */
+    align-items: center;
+    padding: 0.8rem 2rem;
+    z-index: 1000;
+    transition: all 0.3s ease; /* Smooth transition */
+    font-family: 'Inter', sans-serif;
+}
+
+/* Blurred navbar for video sections - Updated opacity and blur strength */
+.navbar.blurred {
+    background-color: rgba(255, 255, 255, 0.15); /* More subtle background */
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+}
+
+/* Navbar background on scroll */
+.navbar.scrolled {
+    background-color: var(--light-cream); /* Solid light cream */
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Navigation Links - Fixed color values */
+.nav-links {
+    display: flex;
+    gap: 2rem;
+    font-family: 'Inter', sans-serif;
+    transition: all 0.3s ease;
+}
+
+.nav-links a {
+    position: relative;
+    text-decoration: none;
+    color: var(--light-cream); /* Default light cream color for all states */
+    font-weight: 500;
+    transition: color 0.3s ease, transform 0.2s ease;
+}
+
+/* Navbar links - darker color when scrolled */
+.navbar.scrolled .nav-links a {
+    color: var(--dark-green);
+}
+
+/* Enhanced hover effect for navigation links */
+.nav-links a:hover {
+    color: var(--golden-yellow); /* Golden yellow on hover */
+    transform: translateY(-2px); /* Slight lift effect */
+}
+
+/* Underline effect on hover */
+.nav-links a::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    bottom: -4px;
+    width: 0;
+    height: 2px;
+    background: var(--golden-yellow); /* Changed to golden yellow */
+    transition: width 0.3s ease;
+    transform: translateX(-50%);
+}
+
+.nav-links a:hover::after {
+    width: 100%; /* Expand underline on hover */
+}
+
+/* Logo Styling */
+.logo {
+    font-family: 'Cinzel Decorative', serif;
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--light-cream); /* Changed to light cream */
+    letter-spacing: 2px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+    transition: color 0.3s ease;
+}
+
+.navbar.scrolled .logo {
+    color: var(--dark-green); /* Dark green when scrolled */
+}
+
+/* Mobile Menu Button */
+.menu-btn {
+    font-size: 2rem;
+    color: var(--light-cream);
+    cursor: pointer;
+    display: none;
+}
+
+/* Responsive Menu Styling */
+@media (max-width: 768px) {
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        background-color: var(--light-cream);
+        position: absolute;
+        top: 60px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 90%;
+        text-align: center;
+        padding: 1rem;
+        border-radius: 15px;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    .nav-links a {
+        color: var(--dark-green);
+    }
+
+    .menu-btn {
+        display: block;
+    }
+}
+
 </style>
 <script>// Add this to your script.js file
  document.addEventListener('DOMContentLoaded', function() {
@@ -409,6 +547,7 @@ line-height: 1.7; /* Keep good spacing between lines */
      });
    }
  });
+ 
  </script>
 
 
