--- a/farm-to-table.html
+++ b/farm-to-table.html
@@ -39,13 +39,12 @@
     </div>
   </section>
 
-  <!-- Navbar -->
   <nav class="navbar">
     <div class="logo-container" style="display: flex; align-items: center;">
       <a href="index.html" style="display: flex; align-items: center;">
         <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
         <div class="logo">Noorani</div>
-      </a>
+        </a>
     </div>
     <div class="nav-links">
       <a href="index.html">Home</a>
@@ -54,9 +53,10 @@
       <a href="reserve.html">Reserve</a>
       <div class="relative group">
         <a href="#" class="peer desktop-only">About Us</a>
+        <!-- Mobile dropdown will be created by JavaScript -->
         <div class="absolute hidden peer-hover:flex group-hover:flex flex-col bg-white text-[#093C34] shadow-lg mt-1 rounded-lg overflow-hidden z-50 desktop-dropdown">
           <a href="sustainability.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Sustainability</a>
-          <a href="roots.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Our Roots</a>
+          <a href="our-roots.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Our Roots</a>
           <a href="farm-to-table.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Farm-to-Table</a>
           <a href="references.html" class="px-4 py-2 hover:bg-[#f3e2c4]">References</a>
         </div>
@@ -65,6 +65,7 @@
     </div>
     <div class="menu-btn">&#9776;</div>
   </nav>
+
 
   <section class="farm-to-table">
     <!-- Section Introduction -->
