--- a/references.html
+++ b/references.html
@@ -4,11 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Process - Noorani</title>
+  <title>References - Noorani</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="farm-to-table-styles.css">
+  <link rel="stylesheet" href="styles.css">
   
-  <script src="farm-to-table-script.js" defer></script>
+  <script src="script.js" defer></script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -22,24 +22,33 @@
     </div>
     <div class="subpage-overlay">
       <h1 class="subpage-title">References & Worklog</h1>
-      <button class="scroll-down-btn">References & Worklog</button>
+      <a href="#references" class="scroll-down-btn">References & Worklog</a>
     </div>
   </section>
 
   <!-- Navbar -->
   <nav class="navbar">
-    <div class="logo">
-      <a href="index.html">
-        <img src="noorani logo.png" alt="Noorani">
+    <div class="logo-container" style="display: flex; align-items: center;">
+      <a href="index.html" style="display: flex; align-items: center;">
+        <img src="android-chrome-192x192.png" alt="Noorani Logo" style="height: 50px; width: auto; margin-right: 10px;">
+        <div class="logo">Noorani</div>
       </a>
     </div>
     <div class="nav-links">
-      <a href="#">Home</a>
-      <a href="#">Menu</a>
-      <a href="#">About</a>
-      <a href="#">Takeout</a>
-      <a href="#">Contact</a>
-      <a href="farm-to-table.html">Our Process</a>
+      <a href="index.html">Home</a>
+      <a href="menu.html">Menu</a>
+      <a href="takeout.html">Take-Out</a>
+      <a href="reserve.html">Reserve</a>
+      <div class="relative group">
+        <a href="#" class="peer desktop-only">About Us</a>
+        <div class="absolute hidden peer-hover:flex group-hover:flex flex-col bg-white text-[#093C34] shadow-lg mt-1 rounded-lg overflow-hidden z-50 desktop-dropdown">
+          <a href="sustainability.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Sustainability</a>
+          <a href="our-roots.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Our Roots</a>
+          <a href="farm-to-table.html" class="px-4 py-2 hover:bg-[#f3e2c4]">Farm-to-Table</a>
+          <a href="references.html" class="px-4 py-2 hover:bg-[#f3e2c4]">References</a>
+        </div>
+      </div>
+      <a href="contactus.html">Contact</a>
     </div>
     <div class="menu-btn">&#9776;</div>
   </nav>
@@ -51,14 +60,14 @@
       <iframe src="https://drive.google.com/file/d/1Q14JjJpMOxwr6KE2fSafrbtwDG94SpBe/preview" class="document-frame"></iframe>
     </div>
 
-    <h2 class="main-title">References</h2>
+    <h2 class="main-title" id="references">References</h2>
     <div class="content-container">
       <iframe src="https://docs.google.com/document/d/e/2PACX-1vRKKU_G_Xav4_CIWdPZjfZhK10cayvHk3OsR0h8m__3XIxbEvRmz7NE38yA-mr6pecqOcSQA9PzXGDi/pub?embedded=true" class="document-frame"></iframe>
     </div>
 
-    <h2 class="main-title">Worklog</h2>
+    <h2 class="main-title" id="worklog">Worklog</h2>
     <div class="content-container">
-      <iframe src="https://drive.google.com/file/d/10zZQEs84JXimOdX9z-gFn__SiuqqYbN3/preview" class="document-frame"></iframe>
+      <iframe src="https://drive.google.com/file/d/10zZQEs84JXimOdX9z-gFn__SiuqqYbN3/preview" class=" document-frame"></iframe>
     </div>
   </section>
 
@@ -170,7 +179,7 @@
         <a href="#" class="social-icon"><img src="footer/youtube.png" alt="YouTube"></a>
         <a href="#" class="social-icon"><img src="footer/email.png" alt="Email"></a>
       </div>
-      <a href="contactus.html" class="contact-btn">Contact Us</a>
+      <a href=" contactus.html" class="contact-btn">Contact Us</a>
     </div>
   </div>
 
@@ -212,13 +221,12 @@
         if (e.target === termsModal) termsModal.classList.add('hidden');
       });
     });
- </script>
+</script>
 <!-- Terms of Service Modal -->
 <div id="terms-modal" class="modal hidden">
 <div class="modal-content">
   <span class="modal-close" id="close-terms">&times;</span>
   <h2><b>Terms of Service</b></h2>
-  <!-- <p><strong>Last updated:</strong> April 2, 2025</p> -->
   <p>By using this site, you agree to these terms. Do not misuse the website or its content. Noorani owns all rights to materials displayed unless stated otherwise.</p>
   <p>You must be of legal age to place orders or make reservations.</p>
 </div>
@@ -229,7 +237,6 @@
 <div class="modal-content">
   <span class="modal-close" id="close-privacy">&times;</span>
   <h2><b>Privacy Policy</b></h2>
-  <!-- <p><strong>Last updated:</strong> April 2, 2025</p> -->
   <p>Noorani respects your privacy. We collect limited data for booking, support, and improving your experience. We do not share your personal data with third parties.</p>
   <p>We use cookies for basic site functionality. Contact us for any questions.</p>
 </div>
